# ai-synthesia

./: .gitignore  ARCH.md  FINAL_SPRINT_SUMMARY.md  PLAN.md  PRODUCT_BRIEF.md  README.md  SPRINT_SUMMARY.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  env.example  package.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/src/: config.py  database.py  main.py  middleware.py  security.py
apps/api/src/models/: __init__.py  auth.py  content.py
apps/api/src/routers/: __init__.py  assets.py  auth.py  automation.py  brand_kits.py  governance.py  health.py  projects.py  reports.py  security.py  storypacks.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: jest.config.js  jest.setup.js  package.json
apps/web/src/__tests__/components/: ExportWizard.test.tsx
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: BrandKitEditor.tsx  ExportWizard.tsx
apps/workers/: package.json
apps/workers/src/agents/: audio.py  consistency.py  evaluator.py  exporter.py  narrative.py  optimizer.py  safety.py  visual.py
apps/workers/src/connectors/: base.ts  gdrive.ts  notion.ts  youtube.ts
apps/workers/src/embeddings/: generator.ts
apps/workers/src/processors/: normalizer.ts
docs/: RUNBOOK.md
scripts/: deploy.sh  init-db.sql  load-test.sh  performance-test.py
terraform/: main.tf  outputs.tf  variables.tf
